--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             position: absolute;
             top: 20px;
             left: 20px;
-            background-color: rgba(255, 255, 255, 0.85);
+            background-color: none;
             color: #0000ff;
             padding: 12px;
             border-radius: 5px;
@@ -27,7 +27,7 @@
             line-height: 1.5;
             z-index: 101;
             display: none;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+            box-shadow: none;
             pointer-events: none;
         }
         
