--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
     
-    <div id="title-bar"><span>Santo Chair Nr.04</span><span id="info-icon">(i)</span></div>
+    <div id="title-bar"><span>Santo Nr. 04</span><span id="info-icon">(i)</span></div>
     <div id="info-box"></div>
 
     <div id="general-modal-overlay" class="modal-overlay"></div>
