--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         .workflow-nav li a {
             display: flex; /* Use flexbox for alignment */
             align-items: center;
+            justify-content: center; /* Add this line to center the flex items */
             gap: 15px; /* Space between emoji and text */
             background-color: #000;
             color: #fff;
