--- a/generate-assembly.html
+++ b/generate-assembly.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Hello! I am HANS<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -154,7 +154,7 @@
             viewerCanvas.addEventListener('click', onObjectClick);
             loadDefaultCube();
             animate();
-            updateHANS("Hello! I am HANS. Add files and describe the object, or load an assembly to begin.");
+            updateHANS("Hello! I am H.A.N.S, the Heuristic Agent for Narrating Structures. Add files and describe the object, or load an assembly to begin.");
         }
 
         function clearModel() {
