--- a/generate-assembly.html
+++ b/generate-assembly.html
@@ -154,7 +154,7 @@ Hello! I am HANS<!DOCTYPE html>
             viewerCanvas.addEventListener('click', onObjectClick);
             loadDefaultCube();
             animate();
-            updateHANS("Hello! I am H.A.N.S., the Heuristic Agent for Narrating Structures. Add files and describe the object, or load an assembly to begin.");
+            updateHANS("Hello! I am H.A.N.S. - the Heuristic Agent for Narrating Structures. Add files and describe the object, or load an assembly to begin.");
         }
 
         function clearModel() {
