--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <!-- --- UPDATED: Emojis are now directly in the link --- -->
                 <li><a href="generate-assembly.html"><span>🧱</span> Generate Assembly</a></li>
                 <li><a href="catalog-damages.html"><span>📍</span> Catalog Damages</a></li>
-                <li><a href="#"><span>📝</span> Plan Actions (Coming Soon)</a></li>
+                <li><a href="plan-actions.html"><span>📝</span> Plan Actions</a></li>
                 <li><a href="#"><span>🛠️</span> Guide Repair (Coming Soon)</a></li>
                 <li><a href="#"><span>📂</span> View History (Coming Soon)</a></li>
             </ul>
