--- a/catalog-damages.html
+++ b/catalog-damages.html
@@ -162,20 +162,27 @@
         function updateMIA(message) { if (typingInterval) clearInterval(typingInterval); MIAOutputEl.innerHTML = `${MIA_PREFIX}<span id="MIA-output-text"></span><span class="cursor"></span>`; const textEl = document.getElementById('MIA-output-text'); const cursorEl = MIAOutputEl.querySelector('.cursor'); let i = 0; typingInterval = setInterval(() => { if (i < message.length) { textEl.innerHTML += message.charAt(i); i++; } else { clearInterval(typingInterval); if (cursorEl) cursorEl.style.display = 'none'; } }, 30); }
         
         function loadDefaultCubeAndDamage() {
-             const defaultModel = {
+            const defaultModel = {
                 "objectName": "Default Cube",
                 "parts": [{
                     "id": "cube",
-                    "name": "The Cube",
                     "origin": { "x": -0.25, "y": -0.25, "z": 0.0 },
                     "dimensions": { "width": 0.5, "depth": 0.5, "height": 0.5 },
-                    "connections": [],
-                    "status": "intact" // Add initial status
+                    "connections": []
                 }]
             };
             createModel(defaultModel);
-            createDamageDots([]); // Start with no damages
-            updateMIA("Loaded a default cube. You can now describe damages or missing parts.");
+
+            const defaultDamage = [{
+                "id": "damage_01",
+                "type": "Scratch",
+                "description": "A default scratch on the top surface of the cube.",
+                "part_id": "cube",
+                "coordinates": { "x": 0.0, "y": 0.0, "z": 0.5 }
+            }];
+            createDamageDots(defaultDamage);
+
+            updateMIA("Loaded a default cube with one damage. You can now add more damages or upload your own files.");
         }
         
         function init() { scene = new THREE.Scene(); scene.background = new THREE.Color(0xffffff); scene.add(objectGroup); camera = new THREE.PerspectiveCamera(50, viewerContainer.clientWidth / viewerContainer.clientHeight, 0.01, 1000); camera.position.set(-1.1, 0.7, -1.1); renderer = new THREE.WebGLRenderer({ canvas: viewerCanvas, antialias: true, alpha: true }); renderer.autoClear = false; renderer.setPixelRatio(window.devicePixelRatio); renderer.setSize(viewerContainer.clientWidth, viewerContainer.clientHeight); controls = new OrbitControls(camera, renderer.domElement); controls.enableDamping = true; controls.target.set(0, 0.4, 0); const ambientLight = new THREE.AmbientLight(0xffffff, 0.8); scene.add(ambientLight); const directionalLight = new THREE.DirectionalLight(0xffffff, 0.7); directionalLight.position.set(2, 5, 3); scene.add(directionalLight); axesScene = new THREE.Scene(); const gizmoSize = 2.5; axesCamera = new THREE.OrthographicCamera(-gizmoSize, gizmoSize, gizmoSize, -gizmoSize, -10, 10); const axes = new THREE.AxesHelper(1.5); axes.rotation.x = -Math.PI / 2; axesScene.add(axes); raycaster = new THREE.Raycaster(); mouse = new THREE.Vector2(); window.addEventListener('resize', onWindowResize); viewerCanvas.addEventListener('click', onObjectClick); animate(); loadDefaultCubeAndDamage(); }
