--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Master Thesis Project: Digital Restoration Workflow</title>
+    <title>From Structure to Action</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧩</text></svg>">
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
@@ -17,13 +18,11 @@
             padding: 20px 0;
             text-align: center;
         }
-        /* --- UPDATED: Container now matches other pages --- */
         .container {
-            max-width: 420px; /* Matched width */
+            max-width: 420px;
             width: 90%;
             background: #fff;
             padding: 20px;
-            /* border has been removed */
             text-align: center;
         }
         h1 {
@@ -46,10 +45,10 @@
             gap: 15px;
         }
         .workflow-nav li a {
-            display: flex; /* Use flexbox for alignment */
+            display: flex;
             align-items: center;
-            justify-content: center; /* Add this line to center the flex items */
-            gap: 15px; /* Space between emoji and text */
+            justify-content: center;
+            gap: 15px;
             background-color: #000;
             color: #fff;
             padding: 15px 20px;
@@ -63,7 +62,6 @@
             background-color: #555;
             color: #fff;
         }
-        /* The ::before pseudo-element is no longer needed */
     </style>
 </head>
 <body>
@@ -73,7 +71,6 @@
         
         <nav>
             <ul class="workflow-nav">
-                <!-- --- UPDATED: Emojis are now directly in the link --- -->
                 <li><a href="generate-assembly.html"><span>🧱</span> Generate Assembly</a></li>
                 <li><a href="catalog-damages.html"><span>📍</span> Catalog Damages</a></li>
                 <li><a href="plan-actions.html"><span>📝</span> Plan Actions</a></li>
