--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
         
         <nav>
             <ul class="workflow-nav">
-                <li><a href="generate-assembly.html"><span>🧱</span> Generate Assembly</a></li>
-                <li><a href="catalog-damages.html"><span>📍</span> Catalog Damages</a></li>
-                <li><a href="plan-actions.html"><span>📝</span> Plan Actions</a></li>
-                <li><a href="#"><span>🛠️</span> Guide Repair (Coming Soon)</a></li>
-                <li><a href="#"><span>📂</span> View History (Coming Soon)</a></li>
+                <li><a href="generate-assembly.html" target="_blank" rel="noopener noreferrer"><span>🧱</span> Generate Assembly</a></li>
+                <li><a href="catalog-damages.html" target="_blank" rel="noopener noreferrer"><span>📍</span> Catalog Damages</a></li>
+                <li><a href="plan-actions.html" target="_blank" rel="noopener noreferrer"><span>📝</span> Plan Actions</a></li>
+                <li><a href="guide-repair.html" target="_blank" rel="noopener noreferrer"><span>🛠️</span> Guide Repair</a></li>
+                <li><a href="view-history.html" target="_blank" rel="noopener noreferrer"><span>📂</span> View History</a></li>
             </ul>
         </nav>
     </div>
