--- a/plan-actions.html
+++ b/plan-actions.html
@@ -82,7 +82,7 @@
             
             <div class="action-buttons">
                 <button id="select-brain-btn" class="btn">🧠 Select Brain</button>
-                <button id="generate-plan-btn" class="btn">Generate Plan</button>
+                <button id="generate-plan-btn" class="btn">📝 Plan Actions</button>
             </div>
 
             <div class="instructions-group">
