--- a/catalog-damages.html
+++ b/catalog-damages.html
@@ -174,7 +174,7 @@
         }
 
         function loadDefaults() {
-            const defaultModel = {"objectName": "Default Cube","parts": [{"id": "cube","status": "intact","origin": { "x": -0.25, "y": -0.25, "z": 0.0 },"dimensions": { "width": 0.5, "depth": 0.5, "height": 0.5 },"connections": []}]};
+            const defaultModel = {"objectName": "Default Cube","parts": [{"id": "cube","status": "defective","origin": { "x": -0.25, "y": -0.25, "z": 0.0 },"dimensions": { "width": 0.5, "depth": 0.5, "height": 0.5 },"connections": []}]};
             const defaultDamage = [{"id": "damage_01","type": "Scratch","description": "A default scratch.","part_id": "cube","coordinates": { "x": 0.0, "y": 0.0, "z": 0.5 }}];
             createModel(defaultModel);
             createDamages(defaultDamage);
