--- a/guide-repair.html
+++ b/guide-repair.html
@@ -108,10 +108,10 @@
             </div>
             
             <div class="action-buttons">
-                <button id="start-btn" class="btn btn-primary">Start</button>
-                <button id="done-btn" class="btn btn-success disabled">Done!</button>
-                <button id="ask-question-btn" class="btn btn-dark">Ask</button>
-                <button id="comment-btn" class="btn btn-dark">Comment</button>
+                <button id="start-btn" class="btn btn-primary">⏱️ Start</button>
+                <button id="done-btn" class="btn btn-success disabled">✔️ Done!</button>
+                <button id="ask-question-btn" class="btn btn-dark">❓ Ask</button>
+                <button id="comment-btn" class="btn btn-dark">💬 Comment</button>
             </div>
 
             <div class="instructions-group">
